# recovARy-agents

./: age_and_gender_agent.py  agent.py  body_parts_impacted_agent.py  game_mock_agent.py  incident_type_agent.py  patient_data.json  personalized_weekly_plan.txt  pyproject.toml  reaction_time_recovery_agent.py  remote_agents_sigmar.py  server.py  snap_game_agent.py  speed_recovery_agent.py  uagent-address.py  wrapper_agent.py
recovery-dashboard/: package-lock.json  package.json
recovery-dashboard/public/: personalized_weekly_plan.txt
recovery-dashboard/src/: App.css  App.js
recovery-dashboard/src/components/: RecoveryPlan.js  SnapGameData.js
