[tool.poetry]
name = "agent-demo"
version = "0.1.0"
description = "trying out fetch ai for the first time"
authors = ["Pranavi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chatgpt-block = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
